test/expected/explain_smi.out
explain static mutable int x
        ^
9: error: "mutable static int" is illegal for built-in type
